exports[`<SelectInput /> renders matches previous snapshot 1`] = `
<div
  className="form-group  ">
  <select
    className="form-control form-control-lg"
    disabled={false}
    id="key"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    value="" />
</div>
`;

exports[`<SelectInput /> renders matches previous snapshot 2`] = `
<div
  className="form-group  ">
  <select
    className="form-control form-control-lg"
    disabled={false}
    id="key"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    value="" />
</div>
`;

exports[`<SelectInput /> renders matches previous snapshot 3`] = `
<div
  className="form-group  ">
  <select
    className="form-control form-control-lg"
    disabled={false}
    id="key"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    value="" />
</div>
`;

exports[`<SelectInput /> renders matches previous snapshot 4`] = `
<div
  className="form-group  ">
  <select
    className="form-control form-control-lg"
    disabled={false}
    id="key"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    value="">
    <option
      value="">
      Placeholder
    </option>
  </select>
</div>
`;

exports[`<SelectInput /> renders matches previous snapshot 5`] = `
<div
  className="form-group  ">
  <select
    className="form-control form-control-lg"
    disabled={true}
    id="key"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    value="">
    <option
      value="">
      Placeholder
    </option>
  </select>
</div>
`;

exports[`<SelectInput /> renders matches previous snapshot 6`] = `
<div
  className="form-group  ">
  <select
    className="form-control form-control-lg"
    disabled={true}
    id="key"
    onBlur={[Function anonymous]}
    onChange={[Function anonymous]}
    value="">
    <option
      value="">
      Placeholder
    </option>
  </select>
</div>
`;
